[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/shortest_path/Mapas/rome_subway.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/shortest_path/Bases/SP_Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/shortest_path/Bases/HUD_OVERLAY.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/shortest_path/niveles/nivel_4.gd" type="Script" id=4]
[ext_resource path="res://scenes/shortest_path/niveles/win_menu.tscn" type="PackedScene" id=6]

[node name="nivel_4" type="Node2D"]
script = ExtResource( 4 )

[node name="HUD_OVERLAY" parent="." instance=ExtResource( 3 )]

[node name="rome_subway" parent="." instance=ExtResource( 1 )]
position = Vector2( 6, 5 )
z_index = -1

[node name="SP_Camera" parent="." instance=ExtResource( 2 )]

[node name="wonMenu" parent="." instance=ExtResource( 6 )]
